remove day from dateCompo

--- a/UI2/peon/query/fuelBuyCategoryMonth/queryCondition.m.css
+++ b/UI2/peon/query/fuelBuyCategoryMonth/queryCondition.m.css
@@ -1,3 +1,11 @@
 .x-panel > .x-panel-content {
 	margin : 10px;
 }
+.x-popPicker[type=date] .x-popPicker-content .x-day{
+	display: none;
+}
+ 
+.x-popPicker[type=date] .x-popPicker-content .x-year,
+.x-popPicker[type=date] .x-popPicker-content .x-month{
+    width: 50%;
+}
